Fix some IE layout bugs

--- a/src/layouts/all.scss
+++ b/src/layouts/all.scss
@@ -411,6 +411,10 @@ main {
           }
         }
 
+        .content {
+          display: block;
+        }
+
       }
 
       .featured-video-wrapper {
