--- a/src/layouts/responsive.scss
+++ b/src/layouts/responsive.scss
@@ -44,6 +44,12 @@
 
       }
 
+      .hero .gatsby-image-wrapper {
+        .claim {
+          padding: 0 50px;
+        }
+      }
+
       .page-content {
 
         .featured-video-wrapper,
